--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,74 @@
 html {
   font-family: 'roboto';
 }
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  height: 1912px;
+}
+
+header, footer {
+  background-color: #1F2937;
+  color: #E5E7EB;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 16px 12%;
+  font-size: 18px;
+}
+
+footer {
+  justify-content: center;
+}
+
+.logo, h1 {
+  color: #F9FAF8;
+  font-weight: 800;
+}
+
+.logo {
+  font-size: 24px;
+}
+
+h1 {
+  font-size: 48px;
+}
+
+li {
+  list-style: none;
+}
+
+ul {
+  display: flex;
+  column-gap: 32px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.banner {
+  width: 100%;
+  display: flex;
+  column-gap: 60px;
+}
+
+.two {
+  width: 100%;
+  background-color: hsla(0, 0%, 45%, 1);
+}
+.button {
+  padding: 5px 36px;
+  border-radius: 8px;
+  background-color: hsla(200, 100%, 50%, 1);
+  width: 60px;
+  font-weight: 700;
+  color: #E5E7EB;
+}
