--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,12 @@ h1 {
   font-size: 48px;
 }
 
+h2 {
+  font-weight: 900;
+  font-size: 36px;
+  color: #1F2937;
+}
+
 li {
   list-style: none;
 }
@@ -67,8 +73,33 @@ nav {
 .button {
   padding: 5px 36px;
   border-radius: 8px;
-  background-color: hsla(200, 100%, 50%, 1);
+  background-color: #3882F6;
   width: 60px;
   font-weight: 700;
   color: #E5E7EB;
+}
+
+.info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.square {
+  border: 3px solid #3882F6;
+  width: 150px;
+  height: 150px;
+  border-radius: 15px;
+}
+
+.squares {
+  display: flex;
+  justify-content: center;
+  font-size: 16px;
+  column-gap: 40px;
+  text-align: center;
+}
+
+.sq-wrap {
+  width: 150px;
 }
