--- a/styles.css
+++ b/styles.css
@@ -103,3 +103,25 @@ nav {
 .sq-wrap {
   width: 150px;
 }
+
+.quote {
+  background-color: #E5E7EB;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.quote p {
+  font-size: 36px;
+  font-style: italic;
+  color: #1F2937;
+  width: 60%;
+}
+
+.author {
+  font-size: 18px;
+  align-self: flex-end;
+  margin-right: 20%;
+  font-weight: 900;
+}
