--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@ html {
 
 body {
   height: 1912px;
+  display: flex;
+  flex-direction: column;
 }
 
 header, footer {
@@ -17,13 +19,19 @@ header, footer {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  row-gap: 100px;
   align-items: center;
   padding: 16px 12%;
   font-size: 18px;
 }
 
+header {
+  flex: 6;
+}
+
 footer {
   justify-content: center;
+  flex: 1;
 }
 
 .logo, h1 {
@@ -43,6 +51,7 @@ h2 {
   font-weight: 900;
   font-size: 36px;
   color: #1F2937;
+  margin: -30px 0 70px 0;
 }
 
 li {
@@ -75,6 +84,8 @@ nav {
   border-radius: 8px;
   background-color: #3882F6;
   width: 60px;
+  height: 21px;
+  cursor: pointer;
   font-weight: 700;
   color: #E5E7EB;
 }
@@ -82,7 +93,9 @@ nav {
 .info {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex: 6;
 }
 
 .square {
@@ -110,6 +123,7 @@ nav {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex: 5;
 }
 
 .quote p {
@@ -124,4 +138,36 @@ nav {
   align-self: flex-end;
   margin-right: 20%;
   font-weight: 900;
+}
+
+.sign-up {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 5;
+}
+
+.sign-up-banner {
+  background-color: #3882F6;
+  padding: 50px 70px;
+  display: flex;
+  justify-content: space-between;
+  column-gap: 120px;
+  border-radius: 10px;
+}
+
+.border {
+  border: 2px #F9FAF8 solid
+}
+
+.su-one {
+  color: #F9FAF8;
+  font-size: 18px;
+  font-weight: 900;
+}
+
+.su-two {
+  color: #E5E7EB;
+  font-size: 14px;
+  font-weight: 700;
 }
